fixed some weird jumping glitch

--- a/src/app/shared/dialogs/screen-arrange/screen-arrange-preview/screen-arrange-preview.component.scss
+++ b/src/app/shared/dialogs/screen-arrange/screen-arrange-preview/screen-arrange-preview.component.scss
@@ -5,6 +5,7 @@
 .dragging-config {
   display: flex;
   flex-direction: row;
+  height: 4rem;
 
   .spacer {
     min-height: 4rem;
